# authub

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/authub/: __init__.py  errors.py  flow.py  hub.py  mapping.py  models.py  plugins.py  presets.py  state.py
src/authub/email/: __init__.py  base.py  console.py
src/authub/idp/: __init__.py  models.py  provider.py  store.py
src/authub/protocols/: __init__.py  base.py  oauth2.py  oidc.py  saml.py
src/authub/protocols/saml/: THIRD_PARTY_NOTICES  __init__.py  _authn_request.py  _constants.py  _idp_metadata.py  _response.py  _xml.py  _xmlsec.py
src/authub/scim/: __init__.py  auth.py  models.py  server.py  store.py
src/authub/stores/: __init__.py  base.py  memory.py
src/authub/tokens/: __init__.py  base.py  claims.py  jwt.py
src/authub/web/: deps.py  middleware.py  router.py
tests/: conftest.py  test_deps.py  test_dev_idp.py  test_e2e_multi_provider.py  test_e2e_oidc.py  test_e2e_oidc_flows.py  test_e2e_perf.py  test_e2e_security.py  test_errors.py  test_flow.py  test_hub.py  test_idp.py  test_mapping.py  test_models.py  test_plugins.py  test_presets.py  test_protocol_base.py  test_protocol_oauth2.py  test_protocol_oidc.py  test_router.py  test_saml.py  test_scim.py  test_state.py  test_stores.py  test_tokens.py  test_version.py
