[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "authub"
version = "0.0.4"
description = "Typed, composable authentication hub for FastAPI: OAuth2, OIDC, SAML, service tokens, and an embedded dev IdP."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nir Adler" }]
keywords = ["fastapi", "authentication", "oauth2", "oidc", "saml", "sso", "jwt"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: Session",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.136",
  "pydantic[email]>=2.13",
  "httpx>=0.28",
  "authlib>=1.7",
  "joserfc>=1.7",
  "python-multipart>=0.0.32",
]

[project.optional-dependencies]
saml = ["pysaml2>=7.5", "pyopenssl>=25"]
all = ["pysaml2>=7.5", "pyopenssl>=25"]

[project.urls]
Homepage = "https://github.com/niradler/authub"
Source = "https://github.com/niradler/authub"
Issues = "https://github.com/niradler/authub/issues"

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.0.0",
  "respx>=0.22.0",
  "asgi-lifespan>=2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["refs"]  # read-only reference checkouts - never lint or format them

[tool.ruff.lint]
select = [
  "E", "F", "I", "UP", "B", "SIM", "C4", "ASYNC", "PT", "RUF",
  "PLC0415", "ERA", "T20", "N", "TID", "FA", "LOG", "G", "RET", "PTH",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415", "ERA", "T20", "N", "TID", "FA", "LOG", "G", "RET", "PTH", "PT018"]

[tool.ruff.lint.isort]
known-first-party = ["authub"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["authlib.*", "saml2.*", "authub.protocols.saml"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/authub"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError", "@(abc\\.)?abstractmethod"]
